cloud9/rs-catalog-http-route-var.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: "${CLUSTER1_NAME}-catalog"
  namespace: catalog
spec:
  hostnames:
  - "${CATALOG_FQDN}"
  parentRefs:
  - name: retail-store-gateway
    sectionName: http
  rules:    
  - backendRefs:
    - name: catalog
      kind: Service
      port: 80
      namespace: catalog
